# Josh

./: .replit  package-lock.json  package.json  replit.md  version.json
attached_assets/: Pasted--include-obfuscate-h-const-char-srcpy-O-R-srcpy-PACKAGE_1775788496149.txt
blood/src/main/: AndroidManifest.xml
bs/: package-lock.json  package.json  server.js
bs/public/: admin.html  index.html
bs/src/main/jni/: Android.h.bak1  Android.mk  Android.mk.bak  AntiDetection.cpp  BYPASS.h  CMakeLists.txt  Domain.h  JNIStuff.h  Jni_Stuff.h  Jni_Stuff.h.bak  ReportDetector_Android.h  ReportDetector_Android.h.bak  WaveModsConfig.h  anti_detect.cppbak  antitelemetry_config.txt  draw.h  draw.h.bak  gui_helpers.h  main.cpp  main.cpp.jadi.telemetri  main.cppnormal
bs/src/main/jni/Substrate/: SubstrateHook.cpp
bs/src/main/jni/WaveMods/: CN.h
bs/src/main/jni/imgui/: imgui.h  imgui.h.bak  imgui_draw.cpp
bs/src/main/jni/include/: sync_entities.h  sync_entities.h.bak
bs/src/main/jni/include/hpp/imgui/: persistence.h
bss/src/main/: AndroidManifest.xml
key/: .replit  package-lock.json  package.json  server.js  vercel.json
key/public/: admin.html  index.html
keysystem/: package.json  server.js
keysystem/public/: index.html
src/main/: AndroidManifest.xml  compile.sh
src/main/jni/: Android.mk  AntiTelemetry.cpp  Chams.h  DomainScanner.cpp  DomainScanner.h  Jni_Stuff.h  NetworkHooks.h  block.cpp  draw.h  draw.h.bak  main.cpp  main.cpp.bak  variables.h
src/main/jnij/: Android.mk.bak  JNIStuff.h  draw.h  (+5 more)
telebot/: db.js  index.js  package-lock.json  package.json
(+86 files in other folders)
